--- a/web/app/templates/comment.hbs
+++ b/web/app/templates/comment.hbs
@@ -1,4 +1,4 @@
 <span class="author">{{author}}</span>
 <span class="delete"><i class="icon-remove"></i></span>
-<span class="date">{{formatDate date labels.dateTimeFormat}}</span>
+<span class="date">{{formatDate date dateFormat}}</span>
 <span>{{text}}</span>
