--- a/web/app/templates/filter-dates.hbs
+++ b/web/app/templates/filter-dates.hbs
@@ -10,4 +10,4 @@
     {{/each}}
     </div>
 </div>
-<button class="btn">{{labels.validate}}</button>
+<button class="btn">{{t 'validate'}}</button>
