--- a/web/app/templates/header-zoom.hbs
+++ b/web/app/templates/header-zoom.hbs
@@ -7,7 +7,7 @@
             <span class="date">{{format-date date 'D MMMM YYYY'}}</span>
             <span class="description">
             {{#if description}} : {{description}} {{else}}
-                {{#if admin}} : {{labels.addDescription}} {{/if}}
+                {{#if admin}} : {{t addDescription}} {{/if}}
             {{/if}}
             </span>
             <span class="delete" style="display: inline;">
