--- a/web/app/templates/items.hbs
+++ b/web/app/templates/items.hbs
@@ -3,7 +3,7 @@
     <div class="row">
     {{#for 1 3}}
         <div id="column{{this}}" class="column col-md-4">
-        {{#each items}}
+        {{#each controller}}
             {{partial 'picture'}}
         {{/each}}
         </div>
