--- a/web/app/templates/header-edit.hbs
+++ b/web/app/templates/header-edit.hbs
@@ -1,10 +1,10 @@
 <div class="navbar-inner">
-    <a href="/" class="brand">
-        <img src="/img/logo_m.png" alt="Logo" />
-    </a>
-    <span class="date">{{formatDate item.date labels.dateFormat}}</span> :
-    <input type="text" name="description" value="{{item.description}}" placeholder="{{labels.enterDescription}}" />
+    {{#link-to 'items' class="navbar-brand"}}
+        <img src="img/logo_m.png" alt="Logo" />
+    {{/link-to}}
+    <span class="date">{{formatDate item.date dateFormat}}</span> :
+    <input type="text" name="description" value="{{item.description}}" placeholder="{{t 'enterDescription'}}" />
     <span class="delete" style="display: inline;">
-        {{labels.deletePicture}}
+        {{t 'deletePicture'}}
     </span>
 </div>
