--- a/web/app/templates/header.hbs
+++ b/web/app/templates/header.hbs
@@ -5,10 +5,10 @@
                 <img src="img/logo_m.png" alt="Logo" />
                 <img alt="{{unbound title}}" src="img/titre.png" />
             {{/link-to}}
-            <p class="info pull-right">{{nbItems}} {{labels.picturesToClickAndComment}}</p>
-            <div class="filter">Filtrer...</div>
+            <p class="info pull-right">{{nbItems}} {{t 'picturesToClickAndComment'}}</p>
+            <div class="filter">{{t 'filter'}}</div>
             <img alt="Admin" title="Ajout de photos, modération des commentaires" src="img/admin.png" class="admin" />
-            <img alt="Upload" title="Ajout de photos" src="img/upload.png" class="upload" />
+            <img alt="Upload" title="Ajout de photos" src="img/upload.png" class="upload hidden" />
         </div>
     </div>
 </header>
