--- a/web/app/templates/login.hbs
+++ b/web/app/templates/login.hbs
@@ -1,24 +1,24 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">S'identifier</h3>
+    <h3 id="myModalLabel">{{t 'login.title'}}</h3>
 </div>
 <div class="modal-body">
     <form class="form-horizontal">
         <div class="control-group">
-            <label class="control-label" for="email">{{labels.email}}</label>
+            <label class="control-label" for="email">{{t email}}</label>
             <div class="controls">
-                <input type="email" name="email" id="email" value="" placeholder="{{labels.email}}">
+                <input type="email" name="email" id="email" value="" placeholder="{{t 'email'}}">
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="password">{{labels.password}}</label>
+            <label class="control-label" for="password">{{t 'password'}}</label>
             <div class="controls">
-                <input type="password" name="password" id="password" value="" placeholder="{{labels.password}}">
+                <input type="password" name="password" id="password" value="" placeholder="{{t 'password'}}">
             </div>
         </div>
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">{{labels.cancel}}</button>
-    <button class="btn btn-primary">{{labels.validate}}</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">{{t 'cancel'}}</button>
+    <button class="btn btn-primary">{{t 'validate'}}</button>
 </div>
