--- a/web/app/templates/upload.hbs
+++ b/web/app/templates/upload.hbs
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">{{labels.uploadTitle}}</h3>
+    <h3 id="myModalLabel">{{t 'uploadTitle'}}</h3>
 </div>
 <div class="modal-body">
     <form class="form-horizontal">
@@ -10,13 +10,13 @@
                 <div class="upload-image-zone">
                     <img src="{{this.data}}" alt="{{this.filename}}" />
                 </div>
-                <input type="text" name="description-{{this.id}}" placeholder="{{../labels.enterDescription}}" />
+                <input type="text" name="description-{{this.id}}" placeholder="{{t 'enterDescription'}}" />
             </div>
         {{/each}}
         </div>
         <div class="control-group">
-            <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">{{labels.cancel}}</button>
-            <button type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> {{labels.uploadPictures}}</button>
+            <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">{{t 'cancel'}}</button>
+            <button type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> {{t 'uploadPictures'}}</button>
         </div>
     </form>
 </div>
