--- a/web/app/templates/user-form.hbs
+++ b/web/app/templates/user-form.hbs
@@ -1,34 +1,34 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">{{labels.newUser}}</h3>
+    <h3 id="myModalLabel">{{t 'newUser'}}</h3>
 </div>
 <div class="modal-body">
     <p>{{labels.infoNewUser}}</p>
     <p>&nbsp;</p>
     <form class="form-horizontal">
         <div class="control-group" id="groupEmail">
-            <label class="control-label" for="email">{{labels.email}}</label>
+            <label class="control-label" for="email">{{t 'email'}}</label>
             <div class="controls">
-                <input type="email" name="email" id="email" value="" placeholder="{{labels.email}}">
-                <span class="help-inline hide">{{labels.emailError}}</span>
+                <input type="email" name="email" id="email" value="" placeholder="{{t 'email'}}">
+                <span class="help-inline hide">{{t 'emailError'}}</span>
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="password">{{labels.password}}</label>
+            <label class="control-label" for="password">{{t 'password'}}</label>
             <div class="controls">
-                <input type="password" name="password" id="password" value="" placeholder="{{labels.password}}">
+                <input type="password" name="password" id="password" value="" placeholder="{{t 'password'}}">
             </div>
         </div>
         <div class="control-group" id="groupRepeatPassword">
             <label class="control-label" for="password">{{labels.repeatPassword}}</label>
             <div class="controls">
-                <input type="password" name="repeatPassword" id="repeatPassword" value="" placeholder="{{labels.password}}">
-                <span class="help-inline hide">{{labels.passwordsNotIdenticals}}</span>
+                <input type="password" name="repeatPassword" id="repeatPassword" value="" placeholder="{{t 'password'}}">
+                <span class="help-inline hide">{{t 'passwordsNotIdenticals'}}</span>
             </div>
         </div>
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">{{labels.cancel}}</button>
-    <button class="btn btn-primary">{{labels.validate}}</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">{{t 'cancel'}}</button>
+    <button class="btn btn-primary">{{t 'validate'}}</button>
 </div>
