--- a/web/less/custom.css
+++ b/web/less/custom.css
@@ -17,6 +17,10 @@ body {
     padding: 55px 0 0 0;
 }
 
+.hidden {
+    display: none;
+}
+
 header .navbar {
     min-height: 40px;
     margin: 0;
