--- a/web/app/templates/items.hbs
+++ b/web/app/templates/items.hbs
@@ -1,12 +1,4 @@
 {{partial 'header'}}
 <div class="main container-fluid">
-    <div class="row">
-    {{#for 1 3}}
-        <div id="column{{this}}" class="column col-md-4">
-        {{#each controller}}
-            {{partial 'picture'}}
-        {{/each}}
-        </div>
-    {{/for}}
-    </div>
+    {{view Wallblog.GridView}}
 </div>
