--- a/web/app/templates/comment-form.hbs
+++ b/web/app/templates/comment-form.hbs
@@ -1,8 +1,8 @@
 <form>
-    <textarea name="text" placeholder="{{t 'anyComment'}}" rows="1" tabindex="1"></textarea>
+    <textarea name="text" class="form-control" {{translateAttr placeholder="anyComment"}} rows="1" tabindex="1"></textarea>
     <div class="masked">
         <span class="help-inline"></span>
-        <input type="text" name="author" value="" placeholder="{{t 'authorHint'}}" tabindex="2" />
+        <input type="text" class="form-control" name="author" value="" {{translateAttr placeholder="authorHint"}} tabindex="2" />
 
         <button type="button" class="btn" tabindex="4">{{t 'cancel'}}</button>
         <button type="submit" class="btn btn-success" tabindex="3"><i class="icon-ok icon-white"></i> {{t 'submitComment'}}</button>
