--- a/web/app/templates/comment.hbs
+++ b/web/app/templates/comment.hbs
@@ -1,4 +1,6 @@
-<span class="author">{{author}}</span>
-<span class="delete"><i class="icon-remove"></i></span>
-<span class="date">{{formatDate date dateFormat}}</span>
-<span>{{text}}</span>
+<div class="col-md-11 comment">
+    <span class="author">{{author}}</span>
+    <span class="delete"><i class="icon-remove"></i></span>
+    <span class="date">{{format-date date dateFormat}}</span>
+    <span>{{text}}</span>
+</div>
