--- a/web/app/templates/item.hbs
+++ b/web/app/templates/item.hbs
@@ -1,15 +1,23 @@
 {{partial 'header-zoom'}}
 <div class="main container-fluid">
-    <div class="row">
-        <div class="col-md-9 picture">
-            {{#link-to 'items'}}
-                <img src="http://wallblog.jops-dev.com/pictures/{{unbound file}}" alt="" />
-            {{/link-to}}
+    <div class="row full-height">
+        <div class="col-md-9">
+            <div class="picture">
+                {{#link-to 'items'}}
+                    <img src="http://wallblog.jops-dev.com/pictures/{{unbound file}}" alt="" />
+                {{/link-to}}
+            </div>
         </div>
         <div class="col-md-3 commentBar">
-            <h4>{{labels.comments}}</h4>
-            <div class="row-fluid commentForm"></div>
-            <div class="row-fluid comments"></div>
+            <h4>{{t 'comments'}}</h4>
+            <div class="row commentForm">
+                {{partial 'comment-form'}}
+            </div>
+            <div class="row comments">
+            {{#each comments}}
+                {{partial 'comment'}}
+            {{/each}}
+            </div>
         </div>
     </div>
 </div>
