--- a/web/less/main.less
+++ b/web/less/main.less
@@ -1,2 +1,460 @@
 @import "../vendor/bootstrap/less/bootstrap";
-@import (less) "custom.css";
+
+@font-face {
+  font-family: 'SansationRegular';
+  src: url('../fonts/sansation_regular-webfont.eot');
+  src: url('../fonts/sansation_regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/sansation_regular-webfont.woff') format('woff'), url('../fonts/sansation_regular-webfont.ttf') format('truetype'), url('../fonts/sansation_regular-webfont.svg#SansationRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  background-color: #eee;
+  font-family: 'SansationRegular', sans-serif;
+  margin: 0;
+  height: 100%;
+  padding: 55px 0 0 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.wrapper {
+  .make-row(6px);
+}
+
+.column-s4 {
+  .make-xs-column(4, 12px);
+}
+
+.column-s6 {
+  .make-xs-column(6, 12px);
+}
+
+.column-s12 {
+  .make-xs-column(12, 12px);
+}
+
+header .navbar {
+  min-height: 40px;
+  margin: 0;
+}
+
+header .navbar-inverse {
+  background-color: inherit;
+  border-color: inherit;
+  color: #fff;
+}
+
+header .navbar-fixed-top {
+  border: 0;
+}
+
+header .navbar-inverse .navbar-inner {
+  background-color: #999;
+  background-image: -moz-linear-gradient(top, #999, #888);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#999), to(#888));
+  background-image: -webkit-linear-gradient(top, #999, #888);
+  background-image: -o-linear-gradient(top, #999, #888);
+  background-image: linear-gradient(to bottom, #999, #888);
+  background-repeat: repeat-x;
+  border-color: #bbb;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff999999', endColorstr='#ff888888', GradientType=0);
+  min-height: 40px;
+}
+
+header .navbar .navbar-brand {
+  height: 40px;
+  margin: 0;
+  padding: 2px 5px;
+}
+
+header .navbar .delete {
+  cursor: pointer;
+  display: none;
+  float: right;
+  line-height: 40px;
+  margin-right: 10px;
+}
+
+header .info {
+  font-size: 1.2em;
+  line-height: 40px;
+  margin: 0;
+  padding-right: 50px;
+}
+
+header .date, header .description {
+  font-size: large;
+  line-height: 40px;
+  margin: 0;
+}
+
+header .description {
+  font-weight: bold;
+}
+
+header img.beta, header img.admin, header img.upload {
+  border: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1031;
+}
+
+.main {
+  height: 100%;
+  margin-top: -10px;
+}
+
+.ember-view, .full-height {
+  height: 100%;
+}
+
+.picture img {
+  height: auto;
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+}
+
+.column .item {
+  position: relative;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.column .item img, .column .item video {
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+}
+
+.column .item img, .column .item video, .picture img {
+  -moz-box-shadow: 1px 1px 5px #999;
+  -webkit-box-shadow: 1px 1px 5px #999;
+  box-shadow: 1px 1px 5px #999;
+}
+
+.column .item img:hover, .column .item video:hover {
+  -moz-box-shadow: 2px 2px 6px #FFFFBC;
+  -webkit-box-shadow: 2px 2px 6px #FFFFBC;
+  box-shadow: 2px 2px 6px #FFFFBC;
+}
+
+.column .item .date, .column .item .description, .column .item .nb-comments {
+  background: rgba(0, 0, 0, 0.5);
+  bottom: 0;
+  color: #ffffff;
+  font-size: large;
+  margin: 0;
+  padding: 4px 0;
+  position: absolute;
+  text-align: center;
+  visibility: hidden;
+  width: 100%;
+}
+
+.column .item:hover .date, .column .item:hover .description, .column .item:hover .nb-comments {
+  visibility: visible;
+}
+
+.column .item .date {
+  bottom: auto;
+  font-size: medium;
+  padding: 4px 5px;
+  text-align: center;
+  left: 0;
+  top: 0;
+  width: auto;
+  z-index: 2;
+}
+
+.column .item .nb-comments {
+  background-image: url('../img/comment.png');
+  background-position: right;
+  background-repeat: no-repeat;
+  bottom: auto;
+  font-size: medium;
+  padding: 4px 30px 4px 5px;
+  right: 0;
+  top: 0;
+  width: auto;
+  z-index: 2;
+}
+
+.commentBar {
+  background-color: gray;
+  box-shadow: 0 0 2px 2px #bbb;
+  -moz-box-shadow: 0 0 2px 2px #bbb;
+  -webkit-box-shadow: 0 0 2px 2px #bbb;
+  color: #fff;
+  min-height: 100%;
+  margin-left: -5px;
+  text-align: center;
+}
+
+.commentBar h4 {
+  line-height: 8px;
+  padding-left: 8px;
+  padding-top: 3px;
+  text-align: left;
+}
+
+.row .span3.commentBar {
+  margin-left: 0.7%;
+}
+
+.comment {
+  background-color: #FFFFFF;
+  float: left;
+  font-size: medium;
+  color: #111;
+  margin: 10px 5px 5px 10px;
+  overflow: hidden;
+  padding: 6px;
+  text-align: left;
+  -moz-box-shadow: 0 0 2px 2px #FFF;
+  -webkit-box-shadow: 0 0 2px 2px #FFF;
+  box-shadow: 0 0 2px 2px #FFF;
+}
+
+.row .comment {
+  margin-bottom: 3%;
+  margin-left: 3%;
+  width: 94%;
+}
+
+.comment > * {
+  clear: both;
+  float: left;
+  margin: 0;
+}
+
+.comment .author {
+  border-bottom: 2px solid grey;
+  font-size: large;
+  font-weight: bold;
+  width: 100%;
+}
+
+.comment .date {
+  float: right;
+  font-size: x-small;
+  font-weight: normal;
+  line-height: 15px;
+  padding-bottom: 10px;
+}
+
+.comment .delete {
+  cursor: pointer;
+  display: none;
+  margin-top: -3px;
+  position: absolute;
+  right: 23px;
+}
+
+.commentForm .masked {
+  display: none;
+}
+
+.commentForm form {
+  font-size: 1.1em;
+  margin-bottom: 5px;
+  margin-left: 3%;
+  width: 98%;
+}
+
+.commentForm form button {
+  font-size: 1em;
+}
+
+.commentForm form input, .commentForm form textarea {
+  margin-bottom: 8px;
+  width: 96%;
+}
+
+.commentForm form .btn-success {
+  background-color: #85C100;
+  background-image: -moz-linear-gradient(center top, #85C100, #85B600);
+  box-shadow: 0;
+}
+
+.commentForm form .help-inline {
+  color: yellow;
+}
+
+.picture {
+  cursor: pointer;
+  text-align: center;
+}
+
+.controls {
+  text-align: left;
+}
+
+.help-inline {
+  float: left;
+  clear: both;
+}
+
+.largeModal {
+  height: auto;
+  margin-left: -40%;
+  width: 80%;
+}
+
+.videos .upload-video {
+  margin: 0px 0 25px 0;
+  text-align: center;
+}
+
+.largeModal .upload-image {
+  float: left;
+  margin: 10px;
+  text-align: center;
+}
+
+.largeModal .upload-image * {
+  max-width: 240px;
+}
+
+.largeModal .upload-image input {
+  width: 100%;
+}
+
+.largeModal .upload-image img {
+  max-height: 240px;
+}
+
+.largeModal .upload-image-zone {
+  border: 2px dashed lightgray;
+  height: 245px;
+  line-height: 240px;
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 245px;
+}
+
+form {
+  text-align: center;
+}
+
+.pictures {
+  display: inline-block;
+}
+
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity 0.25s linear;
+  -moz-transition: opacity 0.25s linear;
+  -o-transition: opacity 0.25s linear;
+  transition: opacity 0.25s linear;
+}
+
+.filter {
+  background-color: #eeeeee;
+  border-radius: 5px;
+  color: #000000;
+  cursor: pointer;
+  float: left;
+  font-style: italic;
+  line-height: 28px;
+  margin-left: 46%;
+  margin-top: 6px;
+  padding: 0 25px;
+  position: absolute;
+  text-align: center;
+}
+
+.filter.expanded {
+  margin-left: 40%;
+}
+
+.filter i {
+  position: relative;
+  top: 1px;
+  left: 17px;
+}
+
+.filter div.column {
+  cursor: default;
+  float: left;
+  padding: 10px 20px;
+  width: auto;
+}
+
+.filter div.column.month {
+  width: 200px;
+}
+
+.filter div.column span {
+  background-color: #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+  float: left;
+  font-style: normal;
+  margin: 5px;
+  padding: 0 5px;
+}
+
+.filter div.column.year span {
+  clear: both;
+}
+
+.filter div.column span.selected {
+  background-color: lightgreen;
+}
+
+.filter div.column.month span.selected {
+  background-color: powderblue;
+}
+
+.filter button {
+  margin-bottom: 10px;
+}
+
+.hidden {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .filter {
+    display: none;
+  }
+}
+
+@media (max-width: 620px) {
+  .navbar-fixed-top {
+    margin-bottom: 5px;
+    margin-top: -45px;
+    position: relative;
+  }
+
+  header .navbar .delete {
+    float: left;
+    margin-left: 10px;
+  }
+
+  header .info, header .beta {
+    display: none;
+  }
+
+  header .date, header .description {
+    font-size: medium;
+  }
+
+  .col-md-9.picture, .col-md-3.commentBar {
+    width: 98%;
+  }
+
+  .col-md-3.commentBar {
+    margin-top: 10px;
+  }
+}
