--- a/web/app/templates/header.hbs
+++ b/web/app/templates/header.hbs
@@ -7,8 +7,9 @@
             {{/link-to}}
             <p class="info pull-right">{{nbItems}} {{t 'picturesToClickAndComment'}}</p>
             <div class="filter">{{t 'filter'}}</div>
-            <img alt="Admin" title="Ajout de photos, modération des commentaires" src="img/admin.png" class="admin" />
-            <img alt="Upload" title="Ajout de photos" src="img/upload.png" class="upload hidden" />
+            <img alt="Admin" title="Ajout de photos, modération des commentaires"
+            src="img/admin.png" {{bind-attr class=":admin controllers.application.isLogged:hidden"}} {{action 'openModal' 'login'}} />
+            <img alt="Upload" title="Ajout de photos" src="img/upload.png" {{bind-attr class=":upload controllers.application.isLogged::hidden"}} />
         </div>
     </div>
 </header>
