--- a/web/app/templates/login.hbs
+++ b/web/app/templates/login.hbs
@@ -1,24 +1,30 @@
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">{{t 'login.title'}}</h3>
-</div>
-<div class="modal-body">
-    <form class="form-horizontal">
-        <div class="control-group">
-            <label class="control-label" for="email">{{t email}}</label>
-            <div class="controls">
-                <input type="email" name="email" id="email" value="" placeholder="{{t 'email'}}">
+{{#modal-dialog action="close"}}
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" {{action "close"}}><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h3 class="modal-title">{{t 'login.title'}}</h3>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="email">{{t email}}</label>
+                        <div class="col-md-8">
+                            {{input type="email" name="email" id="email" class="form-control" value=email placeholderTranslation='email'}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="password">{{t 'password'}}</label>
+                        <div class="col-md-8">
+                            {{input type="password" name="password" id="password" class="form-control" value=password placeholderTranslation='password' action="login"}}
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true" {{action "close"}}>{{t 'cancel'}}</button>
+                <button class="btn btn-primary" {{action "login"}}>{{t 'validate'}}</button>
             </div>
         </div>
-        <div class="control-group">
-            <label class="control-label" for="password">{{t 'password'}}</label>
-            <div class="controls">
-                <input type="password" name="password" id="password" value="" placeholder="{{t 'password'}}">
-            </div>
-        </div>
-    </form>
-</div>
-<div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">{{t 'cancel'}}</button>
-    <button class="btn btn-primary">{{t 'validate'}}</button>
-</div>
+    </div>
+{{/modal-dialog}}
