--- a/web/less/main.less
+++ b/web/less/main.less
@@ -93,12 +93,27 @@ header .info {
 
 header .date, header .description {
   font-size: large;
+  height: auto;
   line-height: 40px;
   margin: 0;
 }
 
 header .description {
   font-weight: bold;
+}
+
+header .description input {
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  color: @gray;
+  font-size: 1em;
+  height: 28px;
+  line-height: 28px;
+  margin-left: 5px;
+  padding: 2px 6px;
+  position: absolute;
+  top: 5px;
 }
 
 header img.admin, header img.upload {
