--- a/web/templates/video.hbs
+++ b/web/templates/video.hbs
@@ -1,5 +1,6 @@
-<video controls>
-    <source src="/videos/{{file}}.mp4" type="video/mp4" />
-    <source src="/videos/{{file}}.webm" type="video/webm" />
-    <source src="/videos/{{file}}.ogv" type="video/ogg" />
-</video>
+<iframe src="{{file}}"
+        width="300"
+        height="200"
+        frameborder="0"
+        allowfullscreen>
+</iframe>
