--- a/web/templates/video.hbs
+++ b/web/templates/video.hbs
@@ -1,4 +1,4 @@
-<iframe src="{{file}}"
+<iframe src="//www.dailymotion.com/embed/video/{{model.file}}?api={{apiKey}}&html=true"
         width="300"
         height="200"
         frameborder="0"
