--- a/web/templates/upload-video.hbs
+++ b/web/templates/upload-video.hbs
@@ -9,6 +9,7 @@
             <div class="upload-video">
                 <label for="video-{{this.ext}}-datetime">{{this.label}}</label>
                 <input type="date" name="video-{{this.ext}}-date" placeholder="Date de la vidéo (ex: 2015/05/12)" />
+                <input type="text" name="video-{{this.ext}}-description" placeholder="Description de la vidéo" />
                 <input type="url" name="video-{{this.ext}}" id="video-{{this.ext}}" placeholder="{{this.placeholder}}" />
             </div>
         {{/each}}
