Fix mdoel attributes missing in zoom template

--- a/web/templates/item-zoom.hbs
+++ b/web/templates/item-zoom.hbs
@@ -1,5 +1,5 @@
 <div class="span9 picture">
-    <img src="/pictures/{{file}}" alt="" />
+    <img src="/pictures/{{model.file}}" alt="" />
 </div>
 <div class="span3 commentBar">
     <h4>{{labels.comments}}</h4>
