--- a/web/templates/item-zoom.hbs
+++ b/web/templates/item-zoom.hbs
@@ -1,5 +1,21 @@
 <div class="span9 picture">
+{{#if picture}}
     <img src="/pictures/{{model.file}}" alt="" />
+{{else}}
+    {{#if dailymotion}}
+        <iframe src="//www.dailymotion.com/embed/video/{{videoId}}?html=1&info=0&logo=0&related=0&autoplay=1"
+    {{/if}}
+    {{#if youtube}}
+        <iframe id="ytplayer" type="text/html" src="http://www.youtube.com/embed/{{videoId}}?autoplay=1&showinfo=0&playsinline=1&fs=0&rel=0&theme=light"
+    {{/if}}
+    {{#if vimeo}}
+        <iframe src="//player.vimeo.com/video/{{videoId}}?title=0&autoplay=1&badge=0"
+    {{/if}}
+        width="100%"
+        height="100%"
+        frameborder="0">
+    </iframe>
+{{/if}}
 </div>
 <div class="span3 commentBar">
     <h4>{{labels.comments}}</h4>
