--- a/web/templates/video.hbs
+++ b/web/templates/video.hbs
@@ -1,11 +1,11 @@
 {{#if dailymotion}}
-<iframe src="//www.dailymotion.com/embed/video/{{videoId}}?html=1&info=0&logo=0&related=0"
+<iframe src="//www.dailymotion.com/embed/video/{{videoId}}?html=1&info=0&logo=0&related=0&chromeless=1"
 {{/if}}
 {{#if youtube}}
-    <iframe id="ytplayer" type="text/html" src="http://www.youtube.com/embed/{{videoId}}?autoplay=0&showinfo=0&playsinline=1"
+    <iframe id="ytplayer" type="text/html" src="http://www.youtube.com/embed/{{videoId}}?autoplay=0&showinfo=0&playsinline=1&fs=0&rel=0&theme=light"
 {{/if}}
 {{#if vimeo}}
-    <iframe src="//player.vimeo.com/video/{{videoId}}?title=0"
+    <iframe src="//player.vimeo.com/video/{{videoId}}?title=0&chromeless=1&badge=0"
 {{/if}}
         width="{{width}}"
         height="{{height}}"
