--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -332,6 +332,13 @@ form {
     display: none;
 }
 
+.click-overlay {
+    background-color: transparent;
+    display: block;
+    position: absolute;
+    z-index: 500;
+}
+
 @media (max-width: 700px) {
     .filter {
         display: none;
