--- a/web/templates/header.hbs
+++ b/web/templates/header.hbs
@@ -1,9 +1,8 @@
 <div class="navbar-inner">
     <a href="/" class="brand">
-        <img src="/img/logo_m.png" alt="Logo" />
-        <img alt="{{title}}" src="/img/titre.png" />
+        <img src="/img/logo_m.png" alt="Logo" /> Tan, Johan, Evan & Lyam
     </a>
-    <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToClickAndComment}}{{/unlessequals}}</p>
+    <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToComment}}{{/unlessequals}}</p>
     <div class="filter">Filtrer...</div>
     <img alt="Admin" title="Ajout de photos, modération des commentaires" src="/img/admin.png" class="admin" />
     <img alt="Upload" title="Ajout de photos" src="/img/upload.png" class="upload" />
