Fix: comment display was broken

--- a/web/templates/comment.hbs
+++ b/web/templates/comment.hbs
@@ -1,4 +1,4 @@
-<span class="author">{{author}}</span>
+<span class="author">{{model.author}}</span>
 <span class="delete"><i class="icon-remove"></i></span>
-<span class="date">{{formatDate date labels.dateTimeFormat}}</span>
-<span>{{text}}</span>
+<span class="date">{{formatDate model.date labels.dateTimeFormat}}</span>
+<span>{{model.text}}</span>
