--- a/web/templates/video.hbs
+++ b/web/templates/video.hbs
@@ -16,6 +16,9 @@
 {{#if model.date}}
     <span class="date">{{formatDate model.date labels.dateFormat}}</span>
 {{/if}}
+{{#if model.comments}}
+    <span class="nb-comments">{{model.comments.length}}</span>
+{{/if}}
 {{#if model.description}}
     <span class="description">{{model.description}}</span>
 {{/if}}
