--- a/web/templates/grid.hbs
+++ b/web/templates/grid.hbs
@@ -1,3 +1,3 @@
 {{#for 1 nbColumns}}
-<div id="column{{this}}" class="column {{../columnClass}}"></div>
+<section id="column{{this}}" class="column {{../columnClass}}"></section>
 {{/for}}
