--- a/web/templates/header.hbs
+++ b/web/templates/header.hbs
@@ -1,7 +1,9 @@
 <a href="/" class="brand">
     <img src="/img/logo_m.png" alt="Logo" /> Tan, Johan, Evan & Lyam
 </a>
-<p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToComment}}{{/unlessequals}}</p>
 <div class="filter">Filtrer...</div>
-<img alt="Admin" title="Ajout de photos, modération des commentaires" src="/img/admin.png" class="admin" />
-<img alt="Upload" title="Ajout de photos" src="/img/upload.png" class="upload" />
+<div>
+    <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToComment}}{{/unlessequals}}</p>
+    <img alt="Admin" title="Ajout de photos, modération des commentaires" src="/img/admin.png" class="admin" />
+    <img alt="Upload" title="Ajout de photos" src="/img/upload.png" class="upload" />
+</div>
