--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -1,4 +1,4 @@
-<div class="span9 picture">
+<div class="picture">
 {{#if picture}}
     <img src="/pictures/{{model.file}}" alt="" />
 {{else}}
@@ -17,7 +17,7 @@
     </iframe>
 {{/if}}
 </div>
-<div class="span3 commentBar">
+<div class="commentBar">
     <h4>{{labels.comments}}</h4>
     <div class="row-fluid commentForm"></div>
     <div class="row-fluid comments"></div>
