--- a/app/templates/grid.hbs
+++ b/app/templates/grid.hbs
@@ -1,3 +1,3 @@
 {{#for 1 nbColumns}}
-<section id="column{{this}}" class="column {{../columnClass}}"></section>
+<section id="column{{this}}" class="column"></section>
 {{/for}}
