--- a/app/templates/header-zoom.hbs
+++ b/app/templates/header-zoom.hbs
@@ -1,14 +1,14 @@
-<div class="navbar-inner">
-    <a href="/" class="brand">
-        <img src="/img/logo_m.png" alt="Logo" />
-    </a>
-    <span class="date">{{formatDate item.date labels.dateFormat}}</span>
-    <span class="description">
-    {{#if item.description}} : {{item.description}} {{else}}
-        {{#if admin}} : {{labels.addDescription}} {{/if}}
-    {{/if}}
-    </span>
-    <span class="delete" style="display: inline;">
-        {{labels.deletePicture}}
-    </span>
-</div>
+<a href="/" class="brand">
+    <img src="/img/logo_m.png" alt="Logo" />
+</a>
+<span class="date">{{formatDate item.date labels.dateFormat}}</span>
+<span class="description">
+{{#if item.description}} : {{item.description}} {{else}}
+    {{#if admin}} : {{labels.addDescription}} {{/if}}
+{{/if}}
+</span>
+{{#if admin}}
+<span class="delete" style="display: inline;">
+    {{labels.deletePicture}}
+</span>
+{{/if}}
