--- a/app/templates/upload.hbs
+++ b/app/templates/upload.hbs
@@ -1,22 +1,22 @@
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">{{labels.uploadTitle}}</h3>
-</div>
-<div class="modal-body">
-    <form class="form-horizontal">
-        <div class="pictures">
+<div>
+    <header>
+        <h2>{{labels.uploadTitle}}</h2>
+        <button class="icon" title="Fermer" id="modalClose"><i class="icon-close"></i></button>
+    </header>
+    <section>
+        <form class="pictures">
         {{#each pictures}}
             <div class="upload-image">
                 <div class="upload-image-zone">
-                    <img src="{{this.data}}" alt="{{this.filename}}" />
+                    <img src="{{this.data}}" alt="{{this.filename}}"/>
                 </div>
-                <input type="text" name="description-{{this.id}}" placeholder="{{../labels.enterDescription}}" />
+                <input type="text" name="description-{{this.id}}" placeholder="{{../labels.enterDescription}}"/>
             </div>
         {{/each}}
-        </div>
-        <div class="control-group">
-            <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">{{labels.cancel}}</button>
-            <button type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> {{labels.uploadPictures}}</button>
-        </div>
-    </form>
+        </form>
+    </section>
+    <footer>
+        <button id="modalCancel">{{labels.cancel}}</button>
+        <button id="modalSubmit" class="primary">{{labels.uploadPictures}}</button>
+    </footer>
 </div>
