Chg: get momentjs from bower

--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -1,5 +1,5 @@
 <a href="/" class="brand">
-    <img src="/img/logo_m.png" alt="Logo" /> Tan, Johan, Evan & Lyam
+    <img src="/img/logo_m.png" alt="Logo" /> {{title}}
 </a>
 <div class="filter">Filtrer...</div>
 <div class="extra">
