--- a/app/css/main.css
+++ b/app/css/main.css
@@ -185,12 +185,13 @@ button.icon:active {
 }
 
 .commentBar {
-    -moz-box-shadow: 0 0 2px 2px #bbb;
-    -webkit-box-shadow: 0 0 2px 2px #bbb;
+    -moz-box-shadow: 1px 1px 5px #999;
+    -webkit-box-shadow: 1px 1px 5px #999;
     background-color: gray;
-    box-shadow: 0 0 2px 2px #bbb;
+    box-shadow: 1px 1px 5px #999;
     text-align: center;
     color: #fff;
+    width: 20%;
 }
 
 .commentBar h4 {
@@ -280,6 +281,7 @@ button.icon:active {
 .picture {
     cursor: pointer;
     text-align: center;
+    width: 80%;
 }
 
 .controls {
